# simple-fastapi-PROJ

./: base_models.py  create_tables.py  main.py  models.py  pyproject.toml
